--- a/index.html
+++ b/index.html
@@ -409,6 +409,6 @@
         });
       });
     </script>
-    <script src="./js/main.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
