--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
                   </div>
                   <select class="form-control" id="chucvu">
                     <option value="">Chọn chức vụ</option>
-                    <option value="1">Sếp</option>
-                    <option value="2">Trưởng phòng</option>
-                    <option value="3">Nhân viên</option>
+                    <option >Sếp</option>
+                    <option >Trưởng phòng</option>
+                    <option >Nhân viên</option>
                   </select>
                 </div>
 
