--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
                     placeholder="Lương cơ bản"
                   />
                 </div>
+                
                 <span class="sp-thongbao" id="tbLuongCB"></span>
               </div>
               <div class="form-group">
@@ -364,10 +365,10 @@
 
           <!-- Modal footer -->
           <div class="modal-footer" id="modal-footer">
-            <button id="btnThemNV" type="button" class="btn btn-success">
+            <button id="btnThemNV" type="button" class="btn btn-success" >
               Thêm người dùng
             </button>
-            <button id="btnCapNhat" type="button" class="btn btn-success">
+            <button id="btnCapNhat" type="button" class="btn btn-success" data-dismiss="modal" onclick = "updateStaff()">
               Cập nhật
             </button>
             <button
